Fix #1188 Camel View - Tracing page button alignment when looking at a message

--- a/hawtio-web/src/main/webapp/css/site-base.css
+++ b/hawtio-web/src/main/webapp/css/site-base.css
@@ -4141,6 +4141,7 @@ img.nodeIcon:hover {
   margin-bottom: 0;
 }
 
-.slideout-body .btn-group {
+.slideout-body .btn-group,
+.btn-group[hawtio-pager] {
   line-height: normal;
 }
